# MzScan

./: .gitignore  CMakeLists.txt  COPYING.rtf  COPYING.txt  Doxyfile  ReadMe.md
cmake/: DeployQt5.cmake  doxygen.txt
lib/: CMakeLists.txt  EZTWAIN.C  EZTWAIN.H
src/: CMakeLists.txt  icon.rc  main.cpp  mainwindow.cpp  mainwindow.ui  myimageviewer.cpp  res.qrc
src/headers/: mainwindow.h  myimageviewer.h
